# tiny-llm

./: .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  QWEN.md  README.en.md  README.md  README.zh-CN.md  SECURITY.md  _config.yml  index.md  sw.js
.claude/skills/verify/: SKILL.md
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml  release.yml
.kiro/specs/tiny-llm-inference-engine/: design.md  requirements.md  tasks.md
.omc/: project-memory.json
.omc/state/: agent-replay-65dfc717-eba5-4e69-993a-42ead31b3575.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/sessions/65dfc717-eba5-4e69-993a-42ead31b3575/: autopilot-state.json
changelog/: 2025-02-13_project-infrastructure.md  2026-03-09_major-refactoring.md  2026-03-09_workflow-optimization.md  2026-03-10_pages-enhancement.md  2026-03-10_pages-optimization.md  2026-03-13_docs-ci-standardization.md  2026-03-13_docs-information-architecture-standardization.md  2026-03-13_workflow-cpu-safe-ci.md  2026-04-16_bug-fixes.md  index.md  index.zh.md
changelog/en/: docs-ci-standardization.md  pages-enhancement.md  project-infrastructure.md  v2.0.0.md  v2.0.1.md
changelog/zh/: docs-ci-standardization.md  pages-enhancement.md  project-infrastructure.md  v2.0.0.md  v2.0.1.md
docs/: API.md  index.md
docs/en/: API.md  ARCHITECTURE.md  DEVELOPER.md  QUICKSTART.md  README.md
docs/zh/: API.md  ARCHITECTURE.md  QUICKSTART.md  README.md
include/tiny_llm/: cuda_streams.h  cuda_utils.h  gguf_parser.h  inference_engine.h  kv_cache.h  logger.h  model_loader.h  quantization.h  result.h  transformer.h  types.h  validator.h
kernels/: attention.cu  attention.cuh  elementwise.cu  elementwise.cuh  placeholder.cu  rmsnorm.cu  rmsnorm.cuh  w8a16_matmul.cu  w8a16_matmul.cuh  warp_utils.cuh
openspec/: MIGRATION.md  config.yaml
openspec/changes/archive/core-architecture/: design.md  proposal.md
openspec/changes/archive/initial-implementation/: proposal.md  tasks.md
openspec/changes/archive/normalize-archive-readiness/: design.md  proposal.md
openspec/changes/archive/normalize-archive-readiness/specs/ai-assisted-development/: spec.md
openspec/changes/archive/normalize-archive-readiness/specs/project-presentation/: spec.md
openspec/changes/archive/normalize-archive-readiness/specs/repository-governance/: spec.md
openspec/changes/normalize-archive-readiness/: tasks.md
openspec/schemas/api/: inference-engine.yaml
openspec/schemas/db/: schema-v1.dbml
openspec/specs/inference-engine/: spec.md
specs/: README.md
specs/product/: tiny-llm-inference-engine.md
specs/rfc/: 0001-core-architecture.md  0002-implementation-tasks.md
specs/testing/: inference-engine.feature
src/: gguf_parser.cpp  inference_engine.cpp  kv_cache.cpp  logger.cpp  main.cpp  model_loader.cpp  placeholder.cpp  quantization.cpp  transformer.cpp  types.cpp
tests/: test_cuda_utils.cpp  test_inference_engine.cu  test_integration.cu  test_kernels.cu  test_kv_cache.cpp  test_main.cpp  test_model_loader.cpp  test_transformer.cu  test_types.cpp  test_w8a16_matmul.cu
website/: 404.html  CONTRIBUTING.md  Gemfile  _config.yml  _config_dev.yml  index.md  manifest.json  sw.js
website/_includes/: footer_custom.html  head_custom.html
website/_layouts/: default.html
website/_sass/: custom.scss
website/assets/css/: custom.css  custom.scss  home.scss
website/assets/js/: main.js
website/changelog/: index.md  index.zh.md
website/changelog/en/: docs-ci-standardization.md  pages-enhancement.md  v2.0.0.md  v2.0.2.md
website/changelog/zh/: pages-enhancement.md  v2.0.0.md  v2.0.1.md  v2.0.2.md
website/docs/: index.md
website/docs/en/: API.md  ARCHITECTURE.md  BENCHMARKS.md  QUICKSTART.md  TROUBLESHOOTING.md
website/docs/zh/: API.md  ARCHITECTURE.md  BENCHMARKS.md  DEVELOPER.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
